Reinstated hovers, much improved; nested type indexing fixes; new Scala source indenter (thanks to Colin Howe for the patch); switched to scalafork and increased the stack size for builds.
git-svn-id: http://lampsvn.epfl.ch/svn-repos/scala/scala-plugin/trunk@19097 5e8d7ff9-d8ef-0310-90f0-a4852d11357a